# octos

./: .gitignore  flake.nix
api/: OCTOS_UI_PROTOCOL_V1_SPEC_2026-04-24.md
book-zh/src/: installation.md  nix.md
book/src/: installation.md  nix.md
crates/octos-agent/src/: validators.rs  workspace_contract.rs  workspace_git.rs  workspace_policy.rs
crates/octos-agent/src/agent/: execution.rs  loop_runner.rs  mod.rs
crates/octos-agent/src/plugins/: loader.rs  manifest.rs  tool.rs
crates/octos-agent/src/tools/: activate_tools.rs  check_workspace_contract.rs  manage_skills.rs  mod.rs  read_task_output.rs  registry.rs  send_file.rs  spawn.rs
crates/octos-agent/tests/: manage_skills_hash.rs  slides_validator_project_scope.rs  validator_runner.rs
crates/octos-agent/tests/fixtures/: workspace_policy_v1_session.toml
crates/octos-bus/src/: cron_service.rs  file_handle.rs
crates/octos-bus/tests/: file_handle_resolve_tool_path.rs
crates/octos-cli/: Cargo.toml
crates/octos-cli/src/: config.rs  config_watcher.rs  process_manager.rs  profiles.rs  project_templates.rs  qos_catalog.rs  session_actor.rs
crates/octos-cli/src/api/: events.rs  handlers.rs  mod.rs  preview.rs  preview_tokens.rs  router.rs  static_files.rs  ui_protocol.rs  ui_protocol_alpha3_bridge.rs  ui_protocol_alpha4_bridge.rs  ui_protocol_alpha9_bridge.rs  ui_protocol_approvals.rs  ui_protocol_ledger.rs  ui_protocol_progress.rs  ui_protocol_scope.rs  ws_slash.rs
crates/octos-cli/src/commands/: chat.rs  serve.rs
crates/octos-cli/src/commands/gateway/: gateway_runtime.rs  mod.rs  profile_factory.rs
crates/octos-cli/src/prompts/: gateway_default.txt
crates/octos-cli/src/runtime/: cache.rs  mod.rs  profile.rs  session.rs
crates/octos-cli/src/workflow_families/: site.rs
crates/octos-cli/src/workflows/: slides_delivery.rs
crates/octos-cli/static/: app.js
crates/octos-cli/static/admin/: index.html
crates/octos-cli/tests/: build_output_dir_validation.rs  coding_multi_session.rs  preview_auth.rs  preview_signed.rs  ws_slash_commands.rs  ws_token_url_decode.rs  x_profile_id_strip.rs
crates/octos-core/src/: ui_protocol.rs
crates/octos-llm/: Cargo.toml
crates/octos-llm/src/: adaptive.rs  lib.rs  responsiveness.rs
crates/octos-memory/src/: store.rs
crates/octos-pipeline/src/: executor.rs  handler.rs  tool.rs
crates/octos-pipeline/tests/: checkpoint_resume.rs  deadline_enforcement.rs  ux_pipeline.rs  workspace_contract.rs
crates/octos-web/src/runtime/: ui-protocol-types.ts
crates/platform-skills/voice/src/: main.rs
docs/: ARCHITECTURE.md  M11-PROFILE-SESSION-RUNTIME-ADR.md  M9-ALPHA-SOLE-TRANSPORT-ADR.md  M9-GAMMA-SERVER-PROJECTION-ADR.md  OCTOS_UI_PROTOCOL_CHANGE_REQUEST_UPCR_2026_014_PROJECTION_ENVELOPE.md  SKILL_DEPLOYMENT.md  app-skill-dev-guide.md
nix/: shell.nix  treefmt.nix
nix/modules/: darwin.nix  nixos.nix  options.nix
nix/tests/: darwin.nix  nixos.nix
scripts/: fleet-install-skills.sh  milestone-ci.sh
scripts/tests/: test-fleet-install-skills.sh
workstreams/: M11-SOAK-TESTS.md  M11-runtime-unification.md
