[package]
name = "octos-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "CLI interface for octos"

[[bin]]
name = "octos"
path = "src/main.rs"

[dependencies]
octos-core = { workspace = true }
octos-agent = { workspace = true }
octos-memory = { workspace = true }
octos-llm = { workspace = true }
octos-bus = { workspace = true }
octos-pipeline = { workspace = true }
octos-swarm = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
colored = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
uuid = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
rustyline = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true, optional = true }
getrandom = "0.2"
constant_time_eq = "0.3"
open = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
image = { workspace = true }
regex = { workspace = true }
tempfile = { workspace = true }
base64 = { workspace = true }
keyring = { workspace = true }
flate2 = { workspace = true }
tar = { workspace = true }
# Optional deps gated by feature flags (api, admin-bot)
axum = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
rust-embed = { workspace = true, optional = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true, optional = true }
lettre = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
teloxide = { workspace = true, optional = true }
sysinfo = { version = "0.34", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
keyring = { workspace = true, features = ["apple-native"] }

[target.'cfg(windows)'.dependencies]
keyring = { workspace = true, features = ["windows-native"] }

[features]
default = []
api = ["dep:axum", "dep:tower-http", "dep:futures", "dep:rust-embed", "dep:metrics-exporter-prometheus", "dep:lettre", "dep:rand", "dep:sysinfo", "dep:subtle", "octos-bus/api"]
admin-bot = ["dep:teloxide", "dep:futures", "api"]
telegram = ["octos-bus/telegram"]
discord = ["octos-bus/discord"]
slack = ["octos-bus/slack"]
whatsapp = ["octos-bus/whatsapp"]
email = ["octos-bus/email"]
feishu = ["octos-bus/feishu"]
twilio = ["octos-bus/twilio"]
wecom = ["octos-bus/wecom"]
matrix = ["octos-bus/matrix"]
wecom-bot = ["octos-bus/wecom-bot"]
qq-bot = ["octos-bus/qq-bot"]
wechat = ["octos-bus/wechat"]
git = ["octos-agent/git"]
ast = ["octos-agent/ast"]
# Mp3 decode for the AudioNonSilent workspace-contract validator (.mp3 files).
# Without it, validators on .mp3 artifacts return "feature not enabled" — see
# `crates/octos-agent/src/validators.rs`. Fleet builds that ship the podcast
# / fm_tts skills should enable this so the contract layer accepts the mp3
# outputs they produce.
audio_mp3 = ["octos-agent/audio_mp3"]

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
tower = { workspace = true }
axum = { workspace = true }
# Wave-4 B3.4 — enable `test-utils` for octos-llm so the gateway's
# failover-surfacing tests can call `publish_failover_for_subscribers`.
# Production builds don't see this; only `cargo test -p octos-cli`.
octos-llm = { workspace = true, features = ["test-utils"] }
