[package]
name = "octos-llm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "LLM provider abstraction for octos"

[features]
default = []
# Exposes test-only helpers (e.g. `AdaptiveRouter::publish_failover_for_subscribers`)
# for downstream crates' integration tests. Production builds must NOT enable
# this — synthetic failover broadcasts would otherwise be visible on the
# stable public API.
test-utils = []

[dependencies]
octos-core = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
eyre = { workspace = true }
futures = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
redb = { workspace = true }
metrics = { workspace = true }

[lints]
workspace = true

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
